Renamed game to app and adding resource manager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ link_directories(${SDL2_LIBRARY_DIRS} ${SDL2_TTF_LIBRARY_DIRS} ${SDL2_IMAGE_LIBR
 
 # Your executable
 file(GLOB_RECURSE SRC_FILES src/**.cpp)
-add_executable(${GAME_NAME} ${SRC_FILES})
+add_executable(${GAME_NAME} ${SRC_FILES} ext/SDL_FontCache.cpp)
 
 target_precompile_headers(${GAME_NAME}
   PUBLIC
@@ -27,6 +27,7 @@ target_precompile_headers(${GAME_NAME}
     <array>
     <string>
     <functional>
+    <unordered_map>
     <SDL.h>
     <SDL_image.h>
     <SDL_ttf.h>
